replaced gaps in sections and fix bg colors

--- a/src/assets/css/blocks/about-dexilion/about-dexilion-media.css
+++ b/src/assets/css/blocks/about-dexilion/about-dexilion-media.css
@@ -17,7 +17,6 @@
 @media (max-width: 992px) {
   .about-dexilion {
     padding: 120px 0 46px 0;
-    background-color: var(--bg-main-color);
   }
 
   .about-card-wrapper {
@@ -39,7 +38,7 @@
 
 @media (max-width: 576px) {
   .about-dexilion {
-    padding: 100px 0 43px 0;
+    padding: 44px 0 43px 0;
   }
 
   .about-card-wrapper {
@@ -61,6 +60,8 @@
 }
 
 @media (max-width: 375px) {
+
+
   .about-card-logo {
     margin: 0 0 22px 0;
   }
