--- a/src/assets/css/blocks/hero/hero-media.css
+++ b/src/assets/css/blocks/hero/hero-media.css
@@ -1,4 +1,3 @@
-
 @media (max-width: 992px) {
   .hero-img {
     width: 650px;
@@ -68,7 +67,11 @@
   }
 }
 
-@media (max-width: 375px) {
+@media (max-width: 376px) {
+  .dexilion-hero {
+    padding: 110px 0 57px 0;
+  }
+
   .hero-text {
     justify-content: flex-start;
   }
